Closed
Bug 1469000
Opened 7 years ago
Closed 7 years ago
Painting problem with some animated gif when embedded in a page
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
VERIFIED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | + | verified |
| firefox63 | --- | verified |
People
(Reporter: julienw, Assigned: emilio)
References
Details
(Keywords: regression)
Attachments
(3 files)
|
30.32 KB,
text/plain
|
Details | |
|
865 bytes,
text/html
|
Details | |
|
59 bytes,
text/x-review-board-request
|
aosmond
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
STR:
1. Go to https://css-tricks.com/understanding-web-fonts-getting/#article-header-id-4
2. Look at the animated gif in the paragraph "Spacing and Kerning".
=> The gif isn't painted properly
Note it works fine with displaying the gif directly: https://res.cloudinary.com/css-tricks/image/upload/c_scale,w_1000,f_auto,q_auto/v1518304652/kerning-explainer_bfxl5k.gif
This works in Chrome.
The same happens in https://css-tricks.com/tag/variable-fonts/ with the image right before "A simple resource for finding and trying variable fonts". What's interesting here is that this is a link and we seem to force a correct paint when the user hovers it.
| Reporter | ||
Comment 1•7 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
|
||
This works fine in beta 61.
status-firefox60:
--- → unaffected
status-firefox61:
--- → unaffected
| Reporter | ||
Comment 3•7 years ago
|
||
regression gave me https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b479a3309609c69098ab05bf46e0e6c0b04d2a4e&tochange=f1901407d4fae48934787c62dcb699f75ad0c60d
Emilio you're the possible culprit here ;) Could you have a look?
Flags: needinfo?(emilio)
| Reporter | ||
Updated•7 years ago
|
tracking-firefox62:
--- → ?
Keywords: regression
| Assignee | ||
Comment 4•7 years ago
|
||
There's no way that patch changes that, my patch just avoids going through FFI to get an atom... The gif works for me, is there any chance you could print the previous regression range?
Flags: needinfo?(emilio) → needinfo?(felash)
Comment 5•7 years ago
|
||
Confirm on Mac OSX with:
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:62.0) Gecko/20100101 Firefox/62.0
| Reporter | ||
Comment 6•7 years ago
|
||
Hi Emilio,
I did the mozregression again and indeed found another result, that looks more appropriate:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d7c126843dc0b7cc7251bbf7c21c954d3f391c49&tochange=fc4ca25a0f3941b251ff1a8424e15c6d95c848c9
I must have screwed up my previous run.
You're still the designated author though ;-)
Blocks: 1462272
Flags: needinfo?(felash) → needinfo?(emilio)
| Reporter | ||
Updated•7 years ago
|
OS: Unspecified → All
Hardware: Unspecified → All
| Assignee | ||
Comment 7•7 years ago
|
||
Dang, alright, that does sound more feasible, I'll take a look. Thanks!
I still can't repro the bug on Linux though... Given that image does use a viewport-dependent sizes attribute, I think it's way more likely to be bug 1149357's fault.
| Reporter | ||
Comment 8•7 years ago
|
||
(Ah, I don't know if this is bug 1462272 or bug 1149357)
No longer blocks: 1149357
| Reporter | ||
Comment 9•7 years ago
|
||
(oops sorry for the noise)
> I still can't repro the bug on Linux though...
I'm myself on Linux (Debian stable). Using an Intel GPU in case this is some useful information...
| Reporter | ||
Comment 10•7 years ago
|
||
Still happening in latest nightly, buildid 20180619102337, Linux.
Comment 11•7 years ago
|
||
Sorry, I missed my buildid but it's the same as Julien: 20180619102337 on MacOS
| Assignee | ||
Comment 12•7 years ago
|
||
Alright, so I managed to repro it, but not with WR enabled, can anybody kindly confirm this? :)
| Assignee | ||
Comment 13•7 years ago
|
||
| Assignee | ||
Comment 14•7 years ago
|
||
Taking for now for investigation, not sure if my patches introduce or just expose an existing bug.
Assignee: nobody → emilio
| Assignee | ||
Comment 15•7 years ago
|
||
Ok, I understand what goes wrong now.
| Reporter | ||
Comment 16•7 years ago
|
||
> Alright, so I managed to repro it, but not with WR enabled, can anybody kindly confirm this? :)
Indeed, I don't use WR as you can see in my attached dump from about:support :)
| Assignee | ||
Updated•7 years ago
|
Flags: needinfo?(emilio)
| Comment hidden (mozreview-request) |
Updated•7 years ago
|
Attachment #8986219 -
Flags: review?(matt.woodrow) → review?(aosmond)
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 20•7 years ago
|
||
I looked into delaytest.html to test this, but looks like it'll bring pain... Suggestions welcome.
Comment 21•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8986219 [details]
Bug 1469000: Fix image to layout transform for invalidation.
https://reviewboard.mozilla.org/r/251632/#review259796
Attachment #8986219 -
Flags: review?(aosmond) → review+
Comment 22•7 years ago
|
||
Tracking so that we will take a look at this for uplift to beta 62.
Flags: qe-verify+
Comment 23•7 years ago
|
||
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/12a849d78301
Fix image to layout transform for invalidation. r=aosmond
Comment 24•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
| Assignee | ||
Comment 25•7 years ago
|
||
Comment on attachment 8986219 [details]
Bug 1469000: Fix image to layout transform for invalidation.
Approval Request Comment
[Feature/Bug causing the regression]: bug 1149357
[User impact if declined]: bogus repaint / clip on some images, see this bug and bug 1469784
[Is this code covered by automated tests?]: Unfortunately not, see bug 1470350
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: Load this test-case or the website in the other bug.
[List of other uplifts needed for the feature/fix]: no
[Is the change risky?]: no
[Why is the change risky/not risky?]: It's a simple fix to the image size we invalidate to, effectively reverting to the same behavior before bug 1149357
[String changes made/needed]: none
Attachment #8986219 -
Flags: approval-mozilla-beta?
Updated•7 years ago
|
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Comment 26•7 years ago
|
||
Did someone verify this in Nightly? Maybe in one of the other bugs?
Flags: needinfo?(emilio)
Comment 27•7 years ago
|
||
(In reply to Liz Henry (:lizzard) (needinfo? me) from comment #26)
> Did someone verify this in Nightly? Maybe in one of the other bugs?
FWIW, I am the reporter of duplicate bug 1469784 and I can verify that at least for the duplicate it is fixed.
| Assignee | ||
Comment 28•7 years ago
|
||
Yes, I also verified, and you can see that the gif in https://bugzilla.mozilla.org/attachment.cgi?id=8986181 displays correctly now.
Flags: needinfo?(emilio)
| Reporter | ||
Comment 29•7 years ago
|
||
The original URL is working fine now as well.
Updated•7 years ago
|
Flags: in-qa-testsuite?
Updated•7 years ago
|
Flags: in-qa-testsuite? → in-qa-testsuite+
Comment 30•7 years ago
|
||
Comment on attachment 8986219 [details]
Bug 1469000: Fix image to layout transform for invalidation.
Verified in nightly, fix for a regression in 62; let's uplift for beta 8.
Attachment #8986219 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 31•7 years ago
|
||
| bugherder uplift | ||
Comment 32•7 years ago
|
||
I was able to reproduce this issue using Nightly build from 20180621100048 on Windows 10, OS X 10.14 and Ubuntu 18.04.
I have verified that the issue is no longer reproducible on the latest Nightly build (63.0a1, 20180711100118) on Windows 10 x64, Mac 10.14 and Ubuntu 18.04 x64.
Based on this and comments 28&29 I will mark the issue as Verified-Fixed on Firefox63.
Comment 33•7 years ago
|
||
I was able to reproduce this issue using Beta 62.0b7 on Windows 10, OS X 10.14 and Ubuntu 18.04.
I have verified that the issue is no longer reproducible on the Beta 62.0b8 on Windows 10 x64, Mac 10.14 and Ubuntu 18.04 x64.
Based on this, I will mark the issue as Verified-Fixed on Firefox62.
You need to log in
before you can comment on or make changes to this bug.
Description
•