Bug 1469000: Fix image to layout transform for invalidation. r=aosmond a=lizzard

When computing image to layout transforms for invalidation, use the actual
intrinsic size of the source image, instead of the layout intrinsic size, which
may be scaled by ResponsiveImageSelector since bug 1149357.

I have absolutely no idea how to write a test for this, suggestions welcome.

MozReview-Commit-ID: LP6C9fSvMi2

--HG--
extra : source : 12a849d78301b32f4d800dfe50944fc6f4f810b4